tests/errors/049-prefixed-integer-literals.e
0xG
¬
{
    "message": "Invalid character 'G' in number literal",
    "source_file": "tests/errors/049-prefixed-integer-literals.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 3,
            "message": "Invalid character 'G' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
0b2
¬
{
    "message": "Invalid character '2' in number literal",
    "source_file": "tests/errors/049-prefixed-integer-literals.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 3,
            "message": "Invalid character '2' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
0o8
¬
{
    "message": "Invalid character '8' in number literal",
    "source_file": "tests/errors/049-prefixed-integer-literals.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 3,
            "message": "Invalid character '8' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
¬
0x
¬
{
    "message": "Invalid character 'x' in number literal",
    "source_file": "tests/errors/049-prefixed-integer-literals.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 2,
            "message": "Invalid character 'x' in number literal"
        }
    ],
    "notes": [],
    "help": [
        "Review the number literal for typos or insert whitespace."
    ]
}
